# opik

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  CODEX.md  CONTRIBUTING.md  DART_PIPELINE_DESIGN.md  DEVELOPMENT_LOG.md  Dockerfile.airflow  HOW_SILVER_TO_GOLD_WORKS.md  PHASE1_DESIGN.md  PHASE2_DESIGN.md  README.md  _batch_run.py  _inventory.ps1  agents.md  check_silver.py  check_silver_quality.py  debug_pdf.py  deploy_all.sh  docker-compose.yaml  docker-compose.yml  extract_gold_llm.py  extract_gold_structured.py  extract_silver.py  implementation_guide.md  opik_checkpoint.py  opik_config.py  opik_s3.py  project_tasks.md  pyproject.toml  requirements.txt  run_daily_update.bat  run_daily_update_dry_run.bat  run_daily_update_no_download.bat  run_daily_update_no_login.bat  run_diagnose_download.bat  set nu  (+7 more)
AI_Trading_System/: .env.sample  coding_standards.md  project_status.md
collectors/: koreainvest.py  naver.py
configs/: Dockerfile.airflow  backtest.yaml  daily_update.yaml  execution.yaml  feature.yaml  model.yaml  portfolio.yaml  validation.yaml
dags/: nightly_batch.py
docs/: 01_system_architecture.md  02_universe.md  03_targets.md  09_portfolio.md  AGENT_ARCHITECTURE.md  ARCHITECTURE.md  CHATBOT_RESPONSE_POLICY.md  CODE_REVIEW_2025-06-16.md  CONTRIBUTING.md  DART_PIPELINE_DESIGN.md  HOW_BRONZE_TO_SILVER_WORKS.md  HOW_SILVER_TO_GOLD_WORKS.md  OPIK_PHASE2_OPERATIONS_STATUS.md  PHASE1_DESIGN.md  PHASE2_DESIGN.md  PHASE2_MULTIAGENT_DESIGN.md  PHASE2_STATUS.md  RAG_AI_AGENT_STOCK.md  RAG_SPARK_FAISS_DELTA.md  v3_system.md
embedding/: collect_batch_output.py  common.py  embedding.py  prepare_batch_input.py  status_batch_job.py  (+1 more)
(+592 files in other folders)
