
[project]
name = "ai-trading-system"
version = "0.1.0"
description = "Production-grade AI Quant Trading System for Korean equities"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.0",
    "PyYAML>=6.0.2",
    "pyarrow>=18.0.0",
    "pykrx>=1.0.48",
    "yfinance>=0.2.54",
    "python-dateutil>=2.9.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "black>=24.10.0",
    "mypy>=1.14.0",
]

notebook = [
#    "jupyter>=1.1.0",
#    "ipykernel>=6.29.0",
    "matplotlib>=3.10.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ai_trading_system]
version = "v1.0"
default_config_dir = "configs"
default_output_dir = "outputs"
execution_mode = "paper"
random_seed = 42

